<resources>
    <string name="app_name">Acessibilidade</string>
    <string name="texto_botao_nomear_views">Nomear views</string>
    <string name="texto_botao_edittext">EditText</string>
    <string name="texto_botao_agrupamento_de_views">Agrupamento de views</string>
    <string name="texto_botao_live_region">Live Region</string>
    <string name="texto_dados_do_artista">Dados do artista</string>
    <string name="texto_nome_do_artista">Nome do artista</string>
    <string name="texto_rammstein">Rammstein</string>
    <string name="texto_lista_de_m_sicas">Lista de músicas</string>
    <string name="texto_nome_da_m_sica">Nome da música</string>
    <string name="texto_du_hast">Du hast</string>
    <string name="texto_iron_mainden">Iron Mainden</string>
    <string name="texto_fear_of_the_dark">Fear of the dark</string>
    <string name="texto_plano_mensal">Plano \nMensal</string>
    <string name="texto_valor_mensal">Valor: \nR$ 24,55</string>
    <string name="texto_valor_trimestral">Valor: \nR$ 18,95</string>
    <string name="texto_valor_anual">Valor: \nR$ 10,90</string>
    <string name="texto_botao_contratar">contratar</string>
    <string name="texto_plano_trimestral">Plano Trimestral</string>
    <string name="texto_plano_nanual">Plano \nAnual</string>
    <string name="texto_whiskey_in_the_jar">Whiskey in the jar</string>
    <string name="texto_metallica">Metallica</string>
    <string name="texto_bem_vindo_ao_lembretes">Bem vindo ao lembretes!!!</string>
    <string name="texto_logar_com_redes_sociais">Logar com redes sociais</string>
    <string name="texto_ultima_vez_logado">(ultima vez logado: 10h atrás)</string>
    <string name="texto_content_description_ultima_vez_logado">ultima vez logado há 10 horas atrás</string>
    <string name="texto_minha_lista_de_jogos">Minha lista de jogos</string>
    <string name="texto_botao_buscar">buscar</string>
    <string name="texto_botao_buscar_com_erro">buscar com erro</string>
    <string name="texto_mensagem_erro_conexao">Sistema indisponível \ntente novamente mais tarde</string>
    <string name="texto_editar_perfil">Editar Perfil</string>
    <string name="texto_hint_nome_usuario">Nome de usuário</string>
    <string name="texto_hint_idade">Idade</string>
    <string name="texto_hint_nome_github">Perfil do Github</string>
    <string name="texto_usuario">Usuário</string>
    <string name="texto_senha">Senha</string>
    <string name="live_region_scrollview">Live region scrollview</string>
    <string name="customviews">CustomViews</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="logar_com_redes_sociais">Logar com redes sociais</string>
    <string name="logar_com_facebook">Logar com facebook</string>
    <string name="logar_com_twitter">Logar com twitter</string>
    <string name="logar_com_google">Logar com google</string>
    <string name="view_expansivel">Views Expansíveis</string>
    <string name="texto_botao_navegacao">Navegabilidade de views</string>
    <string name="tutorial">tutorial</string>
    <string name="texto_foco_default">seta botão</string>
</resources>
