<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp">

    <!-- #Acessibilidade agrupamento views, colocando elementos dentro de
    uma view group, e nesta viewgroup colocando atributos de foco, como
    focusable e focusableInTouchMode-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/texto_nome_do_artista"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/texto_nome_da_m_sica"
            android:textStyle="bold"/>


    </LinearLayout>

    <!-- #Acessibilidade agrupamento views, colocando elementos dentro de
    uma view group, e nesta viewgroup colocando atributos de foco, como
    focusable e focusableInTouchMode-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/texto_rammstein"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/texto_du_hast"/>


    </LinearLayout>

    <!-- #Acessibilidade agrupamento views, colocando elementos dentro de
    uma view group, e nesta viewgroup colocando atributos de foco, como
    focusable e focusableInTouchMode-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/texto_iron_mainden"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/texto_fear_of_the_dark"/>


    </LinearLayout>

    <!-- #Acessibilidade agrupamento views, colocando elementos dentro de
    uma view group, e nesta viewgroup colocando atributos de foco, como
    focusable e focusableInTouchMode-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/texto_metallica"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/texto_whiskey_in_the_jar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >

        <!-- #Acessibilidade agrupamento views, colocando elementos dentro de
    uma view group, e nesta viewgroup colocando atributos de foco, como
    focusable e focusableInTouchMode-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_plano_mensal"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_valor_mensal"
                android:textSize="18sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/texto_botao_contratar"
                android:contentDescription="contratar plano mensal"/>

        </LinearLayout>

        <!-- #Acessibilidade agrupamento views, colocando elementos dentro de
    uma view group, e nesta viewgroup colocando atributos de foco, como
    focusable e focusableInTouchMode-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_plano_trimestral"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_valor_trimestral"
                android:textSize="18sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/texto_botao_contratar"
                android:contentDescription="contratar plano trimestral"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_plano_nanual"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_valor_anual"
                android:textSize="18sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/texto_botao_contratar"
                android:contentDescription="contratar plano anual"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>