<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.paulacr.acessibilidade.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/botao_labeling_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/texto_botao_nomear_views"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/botao_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/texto_botao_edittext"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/botao_floating_action_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/floating_action_button"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/botao_groupviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/texto_botao_agrupamento_de_views"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/botao_liveregion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/texto_botao_live_region"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/botao_liveregion_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/live_region_scrollview"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/botao_customview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/customviews"
                android:textSize="20sp"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
