<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/texto_bem_vindo_ao_lembretes"/>

    <ImageView
        android:id="@+id/ic_app_notificacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_app"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logar_com_redes_sociais"
        android:textSize="20sp"
        android:layout_marginTop="45dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>


    <LinearLayout
        android:id="@+id/socialNetworkConnectLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/botao_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/facebookicon"
            android:contentDescription="@string/logar_com_facebook"

            />

        <ImageView
            android:id="@+id/botao_twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/twittericon"
            android:contentDescription="@string/logar_com_twitter"
            />

        <ImageView
            android:id="@+id/botao_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/google"
            android:contentDescription="@string/logar_com_google"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/texto_ultimo_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="bottom"
        android:gravity="bottom|right"
        android:text="@string/texto_ultima_vez_logado"
        android:textSize="18sp"
        />

</LinearLayout>