<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/texto_editar_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_editar_perfil"
        android:textSize="20sp"
        android:textStyle="bold"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <!-- #Acessibilidade atributo labelFor no elemento TextInputLayout
    que irá indicar qual EditText que o hint está lendo-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_hint_nome_usuario"
        android:labelFor="@+id/texto_nome"
        >

        <EditText
            android:id="@+id/texto_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <!-- #Acessibilidade atributo labelFor no elemento TextInputLayout
    que irá indicar qual EditText que o hint está lendo-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_hint_idade"
        android:labelFor="@+id/texto_idade">

        <EditText
            android:id="@+id/texto_idade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <!-- #Acessibilidade atributo labelFor no elemento TextInputLayout
    que irá indicar qual EditText que o hint está lendo-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_hint_nome_github"
        android:labelFor="@+id/texto_nome_perfil">

        <EditText
            android:id="@+id/texto_nome_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>


</LinearLayout>